--- a/portfolio.html
+++ b/portfolio.html
@@ -18,33 +18,35 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="header-border">
-      <div class="container header-line">
-        <a class="link" href="./index.html" lang="en">
-          <span class="logo">Web</span><span class="logo-studioheader">Studio</span></a
+    <header class="header header__border">
+      <div class="container header__container">
+        <a class="logo-link link" href="./index.html" lang="en">
+          <span class="logo-link__web">Web</span><span class="logo-link__studio">Studio</span></a
         >
-        <nav class="nav-site">
-          <ul class="nav-list list">
-            <li class="nav-list-item"><a href="./index.html" class="nav-link link">Студія</a></li>
-            <li class="nav-list-item">
-              <a href="./portfolio.html" class="nav-link link current">Портфоліо</a>
+        <nav class="navigation header__navigation">
+          <ul class="menu navigation__menu list">
+            <li class="menu__item">
+              <a href="./index.html" class="menu__link link">Студія</a>
             </li>
-            <li class="nav-list-item"><a href="#" class="nav-link link">Контакти</a></li>
+            <li class="menu_item">
+              <a href="./portfolio.html" class="menu__link link current">Портфоліо</a>
+            </li>
+            <li class="menu__item"><a href="#" class="menu__link link">Контакти</a></li>
           </ul>
         </nav>
 
-        <ul class="contacts list">
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="mail link">
-              <svg class="mail-icon" width="16" height="12">
+        <ul class="contacts header__contacts list">
+          <li class="contacts__item">
+            <a href="mailto:info@devstudio.com" class="contacts__link link">
+              <svg class="contacts__icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-post"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="item">
-            <a href="tel:+380961111111" class="tel link">
-              <svg class="tel-icon" width="10" height="16">
+          <li class="contacts__item">
+            <a href="tel:+380961111111" class="contacts__link link">
+              <svg class="contacts__icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -243,60 +245,63 @@
     </main>
 
     <footer class="footer">
-      <div class="container footer-cotainer">
+      <div class="container footer__container">
         <div>
-          <a class="footer-logo link" href="./index.html" lang="en">
-            <span class="logo">Web</span><span class="logo-studiofooter">Studio</span>
+          <a class="logo-link footer__logo-link link" href="./index.html" lang="en">
+            <span class="logo-link__web">Web</span
+            ><span class="logo-link__studiofooter">Studio</span>
           </a>
 
           <address class="address">
-            <ul class="list">
-              <li class="address-item">
+            <ul class="address__list list">
+              <li class="address__item">
                 <a
-                  class="google link"
+                  class="address__google-link link"
                   href="https://goo.gl/maps/4ZTm1igQ9A5BLG9d9"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
-              <li class="address-item">
-                <a class="mail-address link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <li class="address__item">
+                <a class="address__link link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
               </li>
-              <li class="address-item">
-                <a class="tel-address link" href="tel:+380961111111">+38 096 111 11 11</a>
+              <li class="address__item">
+                <a class="address__link link" href="tel:+380961111111">+38 096 111 11 11</a>
               </li>
             </ul>
           </address>
         </div>
 
-        <div class="subscribe-wrap">
-          <p class="subscribe">Приєднуйтесь</p>
-          <ul class="footer-soc-list list">
-            <li class="footer-soc-item">
-              <a href="" class="footer-soc-link link">
-                <svg class="footer-soc-icon" width="20" height="20">
+        <div class="subscribe footer__subscribe">
+          <p class="subscribe__title">Приєднуйтесь</p>
+          <ul class="subscribe__soc-list list">
+            <li class="subscribe__soc-item">
+              <a href="" class="subscribe__soc-link link">
+                <svg class="subscribe__soc-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-soc-item">
-              <a href="" class="footer-soc-link link">
-                <svg class="footer-soc-icon" width="20" height="20">
+            <li class="subscribe__soc-item">
+              <a href="" class="subscribe__soc-link link">
+                <svg class="subscribe__soc-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-soc-item">
-              <a href="" class="footer-soc-link link">
-                <svg class="footer-soc-icon" width="20" height="20">
+            <li class="subscribe__soc-item">
+              <a href="" class="subscribe__soc-link link">
+                <svg class="subscribe__soc-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-soc-item">
-              <a href="" class="footer-soc-link link">
-                <svg class="footer-soc-icon" width="20" height="20">
+            <li class="subscribe__soc-item">
+              <a href="" class="subscribe__soc-link link">
+                <svg class="subscribe__soc-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
@@ -304,26 +309,26 @@
           </ul>
         </div>
 
-        <div class="send">
-          <p class="subscribe">Підпишіться на розсилку</p>
+        <div class="subscribe">
+          <p class="subscribe__title">Підпишіться на розсилку</p>
 
-          <div class="send-wrap">
+          <form class="subscribe__form">
             <label for="input-footer"></label>
             <input
               type="email"
+              class="subscribe__input"
               placeholder="E-mail"
-              class="input-footer"
               name="email"
               id="input-footer"
             />
 
-            <button type="submit" class="button-subscribe">
+            <button type="submit" class="subscribe__button">
               Підписатися
-              <svg class="send-icon" width="24" height="24">
+              <svg class="subscribe__icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
             </button>
-          </div>
+          </form>
         </div>
       </div>
     </footer>
